[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/missile.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Missile.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Other Resources/VapourTrail.tres" type="Material" id=4]
[ext_resource path="res://Sounds/jet.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.99997
height = 10.0001

[node name="Missile" type="RigidBody2D" groups=["Missiles", "missiles"]]
script = ExtResource( 2 )
speed = 800.0
Explosion = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["missiles"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Exhaust" type="Particles2D" parent="."]
position = Vector2( -13, 0 )
emitting = false
amount = 1000
lifetime = 3.0
visibility_rect = Rect2( -500, -500, 500, 500 )
local_coords = false
draw_order = 1
process_material = ExtResource( 4 )

[node name="DropTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Lifetimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="JetSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.1
autoplay = true
max_distance = 5000.0
bus = "SFX"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
[connection signal="timeout" from="Lifetimer" to="." method="_on_Lifetimer_timeout"]
